Demo 1
5 sensort + device_usage
