# src/app.js
@@ -5,6 +5,7 @@ const morgan = require('morgan');
 const actionRoutes = require('./routes/action.routes');
 const dashboardRoutes = require('./routes/dashboard.routes');
 const deviceRoutes = require('./routes/device.routes');
+const deviceUsageRoutes = require('./routes/deviceUsage.routes');
 const sensorRoutes = require('./routes/sensor.routes');
 const errorHandler = require('./middleware/errorHandler');
 const notFound = require('./middleware/notFound');
@@ -17,6 +18,7 @@ app.use(express.json({ limit: '1mb' }));
 
 app.use('/api/v1/dashboard', dashboardRoutes);
 app.use('/api/v1/devices', deviceRoutes);
+app.use('/api/v1/device-usage', deviceUsageRoutes);
 app.use('/api/v1/actions', actionRoutes);
 app.use('/api/v1/sensor-readings', sensorRoutes);
 
