# src/routes/deviceUsage.routes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const deviceUsageController = require('../controllers/deviceUsage.controller');
+
+const router = express.Router();
+
+router.get('/', deviceUsageController.getDeviceUsage);
+
+module.exports = router;
